# argoitny

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DJANGO_MIGRATION_GUIDE.md  GPT5_OPTIMIZATION_SUMMARY.md  GPT5_PROMPT_SIMPLIFICATION_SUMMARY.md  GUNICORN_MIGRATION_SUMMARY.md  Makefile  OPENAI_TEMPERATURE_ERROR_ANALYSIS.md  OPENAI_TEMPERATURE_FIX_QUICK_REFERENCE.md  README.md  TEMPERATURE_FIX_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  test.py  test_gemini_flash.py  test_gemini_models.py  verify_gpt5_migration.sh
backend/: .dockerignore  .env.example  .gitignore  ASGI_MIGRATION_GUIDE.md  ASGI_TESTING_GUIDE.md  AUTH_ASYNC_COMPARISON.md  AUTH_ASYNC_MIGRATION.md  AUTH_CHANGES_SUMMARY.md  AUTH_DYNAMODB_IMPLEMENTATION.md  AUTH_VERIFICATION.md  CLEANUP_QUICK_REFERENCE.md  DATABASE_OPTIMIZATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_KR.md  DYNAMODB_CLEANUP_SUMMARY.md  Dockerfile  EXECUTE_DYNAMODB_MIGRATION.md  GUNICORN_CONFIG.md  OPTIMIZATION_REPORT.md  PROMPT_OPTIMIZATION_SUMMARY.md  QUICK_START.md  README_DEPLOYMENT.md  TASKS_DYNAMODB_MIGRATION_SUMMARY.md  algoitny.db  check_problem_key.py  check_specific_problem.py  create_default_plans.py  diagnose_gemini_issue.py  docker-entrypoint.sh  gunicorn.conf.py  init_db.py  list_gemini_models.py  package-lock.json  pyproject.toml  pytest.ini  requirements-production.txt  requirements.txt  s3_lifecycle_policy.json  start_celery.sh  (+9 more)
backend/api/: apps.py  authentication.py  celery_backend.py  models.py  serializers.py  signals.py  tasks.py  tasks_solution_generation.py  urls.py
backend/config/: __init__.py  asgi.py  celery.py  celery_minimal.py  celery_tasks.py  config.example.yaml  secrets.py  settings.py  settings_production.py  settings_test.py  urls.py  wsgi.py
backend/deploy-scripts/: deploy.sh  setup-ec2.sh
backend/docs/: API_KEY_SETUP_GUIDE.md  AWS_EC2_DEPLOYMENT.md  CACHE_QUICK_REFERENCE.md  CACHING_IMPLEMENTATION_SUMMARY.md  CACHING_STRATEGY.md  CELERY_OPTIMIZATION_REPORT.md  CELERY_OPTIMIZATION_SUMMARY.md  CELERY_SQS_CONFIGURATION.md  CONFIG_README.md  (+23 more)
(+363 files in other folders)
