[project]
name = "algoitny-backend"
version = "0.1.0"
description = "AlgoItny Django Backend"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "mysqlclient>=2.2.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.34.0",
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.25.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "django-celery-results>=2.5.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "api"]

[dependency-groups]
dev = []
