[project]
name = "algoitny-backend"
version = "0.1.0"
description = "AlgoItny Django Backend"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "mysqlclient>=2.2.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.34.0",
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.25.0",
    "celery[sqs]>=5.3.0",
    "kombu>=5.3.0",
    "pycurl>=7.45.2",
    "django-celery-results>=2.5.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "api"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "pytest-env>=1.1.0",
]
